Bug 1722890 Part 1 - Apply page scaling to the clipping rect for page content frames. r=dholbert, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D122291